Modifications on alignment and layout. Still need to fix buttons alignment.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,9 +16,35 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-/*
+
 p.lead {
   position: relative;
-  left: 30px;
+  text-align: center;
 }
-*/
+
+
+h1 {
+  position: relative;
+  text-align: center;
+}
+
+h2 {
+  position: relative;
+  text-align: center;
+}
+
+h3 {
+  position: relative;
+  text-align: center;
+}
+
+h4 {
+  position: relative;
+  text-align: center;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
